--- a/login.html
+++ b/login.html
@@ -2,50 +2,87 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login - SmartReminder</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <style>
-    /* CSS dari Blade tetap digunakan (tidak diubah) */
-    /* ... (potong agar ringkas) ... */
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(135deg, #e3efff, #ffffff);
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .login-container {
+      background: white;
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+      width: 100%;
+      max-width: 400px;
+    }
+
+    h2 {
+      text-align: center;
+      color: #0077b6;
+      margin-bottom: 20px;
+    }
+
+    input {
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 16px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+    }
+
+    button {
+      width: 100%;
+      padding: 12px;
+      background-color: #0077b6;
+      color: white;
+      font-weight: bold;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+
+    .error {
+      color: red;
+      margin-bottom: 10px;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
   <div class="login-container">
-    <img src="images/telkom-logo.png" alt="Logo Telkom University" />
-    <h1>SmartReminder</h1>
-    <p>Masuk untuk mulai mengelola pengingat harianmu</p>
-
-    <!-- Simulasi pesan error -->
-    <div class="error-box" style="display: none;">
-      <ul style="list-style: none; padding-left: 0;">
-        <li>• Email atau password salah.</li>
-      </ul>
-    </div>
-
-    <!-- Form login dummy -->
-    <form onsubmit="alert('Form ini hanya demo statis. Tidak akan terkirim.'); return false;">
-      <div class="input-group">
-        <i class="fas fa-envelope"></i>
-        <input type="email" name="email" placeholder="Email" required />
-      </div>
-
-      <div class="input-group">
-        <i class="fas fa-lock"></i>
-        <input type="password" name="password" placeholder="Password" required />
-      </div>
-
-      <button type="submit" class="btn-login">Masuk</button>
+    <h2>🔐 Login SmartReminder</h2>
+    <form onsubmit="return loginDemo(event)">
+      <div class="error" id="error-message" style="display: none;">Email atau password salah!</div>
+      <input type="email" id="email" placeholder="Email" required />
+      <input type="password" id="password" placeholder="Password" required />
+      <button type="submit">Masuk</button>
     </form>
-
-    <div class="extra-link">
-      <a href="#">Lupa kata sandi?</a>
-    </div>
-
-    <div class="extra-link">
-      Belum punya akun? <a href="#">Daftar di sini</a>
-    </div>
   </div>
+
+  <script>
+    function loginDemo(event) {
+      event.preventDefault();
+      const email = document.getElementById("email").value.trim();
+      const password = document.getElementById("password").value.trim();
+      const errorBox = document.getElementById("error-message");
+
+      // Simulasi data login (dummy)
+      if (email === "admin@example.com" && password === "123456") {
+        // Simpan status login ke localStorage (opsional)
+        localStorage.setItem("loggedIn", "true");
+        window.location.href = "dashboard.html";
+      } else {
+        errorBox.style.display = "block";
+      }
+    }
+  </script>
 </body>
 </html>
