--- a/dashboard.html
+++ b/dashboard.html
@@ -113,7 +113,7 @@
 <body>
   <div class="sidebar">
     <h4>📋 Menu Utama</h4>
-    <a href="show.html">🗂 Daftar Pengingat</a>
+    <a href="pengingat.html">🗂 Daftar Pengingat</a>
     <a href="notes.html">📝 Catatan Harian</a>
     <a href="settings.html">⚙️ Pengaturan Akun</a>
   </div>
