--- a/show.html
+++ b/show.html
@@ -32,7 +32,7 @@
     <p><strong>Tanggal Deadline:</strong> 20 Juni 2025</p>
     <p><strong>Deskripsi:</strong></p>
     <p>Pelajari ulang semua materi dan soal latihan. Buat rangkuman di notes.</p>
-    <a href="index.html" class="btn btn-secondary mt-3">← Kembali</a>
+    <a href="dashboard.html" class="btn btn-secondary mt-3">← Kembali</a>
   </div>
 </body>
 </html>
