--- a/index.html
+++ b/index.html
@@ -1,78 +1,88 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <title>Daftar Tasks</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login - SmartReminder</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <style>
     body {
-      font-family: Arial, sans-serif;
-      padding: 40px;
-      background-color: #f9f9f9;
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(135deg, #e3efff, #ffffff);
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
-    table {
-      width: 100%;
-      border-collapse: collapse;
+
+    .login-container {
       background: white;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+      width: 100%;
+      max-width: 400px;
     }
-    th, td {
-      padding: 16px;
-      border-bottom: 1px solid #ddd;
-      text-align: left;
+
+    h2 {
+      text-align: center;
+      color: #0077b6;
+      margin-bottom: 20px;
     }
-    th {
-      background-color: #006699;
+
+    input {
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 16px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+    }
+
+    button {
+      width: 100%;
+      padding: 12px;
+      background-color: #0077b6;
       color: white;
+      font-weight: bold;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
     }
-    tr:hover {
-      background-color: #f1f1f1;
-    }
-    a.btn {
-      padding: 6px 12px;
-      text-decoration: none;
-      color: white;
-      background-color: #28a745;
-      border-radius: 6px;
-    }
-    .actions a {
-      margin-right: 8px;
+
+    .error {
+      color: red;
+      margin-bottom: 10px;
+      text-align: center;
     }
   </style>
 </head>
 <body>
-  <h1>📋 Daftar Pengingat</h1>
-  <table>
-    <thead>
-      <tr>
-        <th>Judul</th>
-        <th>Kategori</th>
-        <th>Status</th>
-        <th>Tanggal</th>
-        <th>Aksi</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Belajar UAS WAD</td>
-        <td>Kuliah</td>
-        <td>✔️ Selesai</td>
-        <td>2025-06-20</td>
-        <td class="actions">
-          <a href="show.html" class="btn">Detail</a>
-          <a href="edit.html" class="btn" style="background-color:#ffc107;">Edit</a>
-        </td>
-      </tr>
-      <tr>
-        <td>Rapat Himpunan</td>
-        <td>Organisasi</td>
-        <td>⏳ Belum Selesai</td>
-        <td>2025-06-22</td>
-        <td class="actions">
-          <a href="show.html" class="btn">Detail</a>
-          <a href="edit.html" class="btn" style="background-color:#ffc107;">Edit</a>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+  <div class="login-container">
+    <h2>🔐 Login SmartReminder</h2>
+    <form onsubmit="return loginDemo(event)">
+      <div class="error" id="error-message" style="display: none;">Email atau password salah!</div>
+      <input type="email" id="email" placeholder="Email" required />
+      <input type="password" id="password" placeholder="Password" required />
+      <button type="submit">Masuk</button>
+    </form>
+  </div>
+
+  <script>
+    function loginDemo(event) {
+      event.preventDefault();
+      const email = document.getElementById("email").value.trim();
+      const password = document.getElementById("password").value.trim();
+      const errorBox = document.getElementById("error-message");
+
+      // Simulasi data login (dummy)
+      if (email === "admin@example.com" && password === "123456") {
+        // Simpan status login ke localStorage (opsional)
+        localStorage.setItem("loggedIn", "true");
+        window.location.href = "dashboard.html";
+      } else {
+        errorBox.style.display = "block";
+      }
+    }
+  </script>
 </body>
 </html>
