--- a/index.html
+++ b/index.html
@@ -1,88 +1,10 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login - SmartReminder</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #e3efff, #ffffff);
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .login-container {
-      background: white;
-      padding: 40px;
-      border-radius: 12px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-      width: 100%;
-      max-width: 400px;
-    }
-
-    h2 {
-      text-align: center;
-      color: #0077b6;
-      margin-bottom: 20px;
-    }
-
-    input {
-      width: 100%;
-      padding: 12px;
-      margin-bottom: 16px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-    }
-
-    button {
-      width: 100%;
-      padding: 12px;
-      background-color: #0077b6;
-      color: white;
-      font-weight: bold;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-
-    .error {
-      color: red;
-      margin-bottom: 10px;
-      text-align: center;
-    }
-  </style>
+  <meta http-equiv="refresh" content="0; url=login.html" />
+  <title>Redirecting...</title>
 </head>
 <body>
-  <div class="login-container">
-    <h2>🔐 Login SmartReminder</h2>
-    <form onsubmit="return loginDemo(event)">
-      <div class="error" id="error-message" style="display: none;">Email atau password salah!</div>
-      <input type="email" id="email" placeholder="Email" required />
-      <input type="password" id="password" placeholder="Password" required />
-      <button type="submit">Masuk</button>
-    </form>
-  </div>
-
-  <script>
-    function loginDemo(event) {
-      event.preventDefault();
-      const email = document.getElementById("email").value.trim();
-      const password = document.getElementById("password").value.trim();
-      const errorBox = document.getElementById("error-message");
-
-      // Simulasi data login (dummy)
-      if (email === "admin@example.com" && password === "123456") {
-        // Simpan status login ke localStorage (opsional)
-        localStorage.setItem("loggedIn", "true");
-        window.location.href = "dashboard.html";
-      } else {
-        errorBox.style.display = "block";
-      }
-    }
-  </script>
+  Jika tidak diarahkan, <a href="login.html">klik di sini</a>.
 </body>
 </html>
