--- a/notes.html
+++ b/notes.html
@@ -35,19 +35,19 @@
   <div class="container-notes">
     <div class="d-flex justify-content-between align-items-center mb-4">
       <h2>📖 Catatan Harian</h2>
-      <a href="notescreate.html" class="btn btn-success btn-add">+ Tambah Catatan</a>
+      <a href="notes-create.html" class="btn btn-success btn-add">+ Tambah Catatan</a>
     </div>
 
     <div class="note-card">
       <h5>Persiapan UAS WAD</h5>
       <p>Mengerjakan ulang latihan dan membuat rangkuman tiap materi.</p>
-      <a href="notesdetail.html" class="btn btn-primary btn-sm">Lihat Detail</a>
+      <a href="notes-detail.html" class="btn btn-primary btn-sm">Lihat Detail</a>
     </div>
 
     <div class="note-card">
       <h5>Evaluasi Kegiatan Himpunan</h5>
       <p>Catatan hasil evaluasi proker semester ini dan masukan dari anggota.</p>
-      <a href="notesdetail.html" class="btn btn-primary btn-sm">Lihat Detail</a>
+      <a href="notes-detail.html" class="btn btn-primary btn-sm">Lihat Detail</a>
     </div>
   </div>
 </body>
